package com.flowboard.card.dto.request;
import lombok.Data;
@Data
public class AssignCardRequest {
    private Long assigneeId;
}
