package com.flowboard.card.dto.request;
import lombok.Data;
@Data
public class UpdatePriorityRequest {
    private String priority;
}
