package com.flowboard.card.dto.request;
import lombok.Data;
@Data
public class UpdateStatusRequest {
    private String status;
}
